--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -1,48 +1,16 @@
+[Window][DockSpaceViewport_11111111]
+Size=1280,720
+Collapsed=0
+
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-Pos=16,88
-Size=280,434
-Collapsed=0
-
-[Window][Example: Log]
-Pos=22,14
-Size=649,405
-Collapsed=0
-DockId=0x3BC79352,0
-
-[Window][Example: Console]
-Pos=60,60
-Size=520,600
-Collapsed=0
-
-[Window][DockSpace Demo]
-Size=1250,750
-Collapsed=0
-
-[Window][Test]
-Pos=261,179
-Size=44,48
-Collapsed=0
-
-[Window][Color editor window]
-Pos=20,14
-Size=364,204
-Collapsed=0
-
-[Window][Scene editor]
-Pos=3,7
-Size=353,195
-Collapsed=0
-
 [Window][Example window]
-Pos=10,6
-Size=353,211
+Pos=6,10
+Size=343,132
 Collapsed=0
 
 [Docking][Data]
-DockSpace ID=0x3BC79352 Pos=253,102 Size=1250,731 CentralNode=1
 
