--- a/EagleEditor/EagleEditor.vcxproj
+++ b/EagleEditor/EagleEditor.vcxproj
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>EAGLE_PLATFORM_WINDOWS;EAGLE_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\Eagle\vendor\spdlog\include;..\Eagle\vendor\glm;..\Eagle\src;..\Eagle\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Eagle\vendor\spdlog\include;..\Eagle\vendor\glm;..\Eagle\vendor\entt\include;..\Eagle\src;..\Eagle\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -95,7 +95,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>EAGLE_PLATFORM_WINDOWS;EAGLE_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\Eagle\vendor\spdlog\include;..\Eagle\vendor\glm;..\Eagle\src;..\Eagle\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Eagle\vendor\spdlog\include;..\Eagle\vendor\glm;..\Eagle\vendor\entt\include;..\Eagle\src;..\Eagle\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -115,7 +115,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>EAGLE_PLATFORM_WINDOWS;EAGLE_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\Eagle\vendor\spdlog\include;..\Eagle\vendor\glm;..\Eagle\src;..\Eagle\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Eagle\vendor\spdlog\include;..\Eagle\vendor\glm;..\Eagle\vendor\entt\include;..\Eagle\src;..\Eagle\vendor;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
