--- a/EagleEditor/imgui.ini
+++ b/EagleEditor/imgui.ini
@@ -4,7 +4,7 @@ Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=133,133
+Pos=133,9
 Size=400,400
 Collapsed=0
 
@@ -16,18 +16,26 @@ Collapsed=0
 
 [Window][Renderer Stats]
 Pos=0,0
-Size=173,720
+Size=528,331
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Scene]
-Pos=175,0
-Size=1105,720
+Pos=530,0
+Size=750,720
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Components window]
+Pos=0,333
+Size=528,387
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=137,166 Size=1280,720 Split=X Selected=0x18B8C0DE
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=173,720 CentralNode=1 Selected=0x7803B429
-  DockNode  ID=0x00000003 Parent=0x8B93E3BD SizeRef=1105,720 HiddenTabBar=1 Selected=0x18B8C0DE
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,198 Size=1280,720 Split=X Selected=0x18B8C0DE
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=528,720 Split=Y Selected=0x7803B429
+    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=173,331 CentralNode=1 Selected=0x7803B429
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=173,387 Selected=0x58817A56
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=750,720 HiddenTabBar=1 Selected=0x18B8C0DE
 
