Added particleSystem as a component and objects now can be moved in the editor

--- a/EagleEditor/imgui.ini
+++ b/EagleEditor/imgui.ini
@@ -16,26 +16,48 @@ Collapsed=0
 
 [Window][Renderer Stats]
 Pos=0,0
-Size=201,331
+Size=213,455
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000001,1
 
 [Window][Scene]
-Pos=203,0
-Size=1077,720
+Pos=215,0
+Size=1065,720
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Components window]
-Pos=0,333
-Size=201,387
+Pos=0,457
+Size=213,263
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,1
+
+[Window][Hierarchy]
+Pos=0,0
+Size=213,455
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Dear ImGui Demo]
+Pos=308,27
+Size=550,680
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=436,274
+Size=408,172
+Collapsed=0
+
+[Window][Properties]
+Pos=0,457
+Size=213,263
+Collapsed=0
+DockId=0x00000005,0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,198 Size=1280,720 Split=X Selected=0x18B8C0DE
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=201,720 Split=Y Selected=0x7803B429
-    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=173,331 CentralNode=1 Selected=0x7803B429
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=173,387 Selected=0x58817A56
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1077,720 HiddenTabBar=1 Selected=0x18B8C0DE
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=1054,280 Size=1280,720 Split=X Selected=0x18B8C0DE
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=213,465 Split=Y Selected=0x7803B429
+    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=402,455 CentralNode=1 Selected=0x788BAA0D
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=402,263 Selected=0xC89E3217
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1065,465 HiddenTabBar=1 Selected=0x18B8C0DE
 
