--- a/EagleEditor/imgui.ini
+++ b/EagleEditor/imgui.ini
@@ -16,25 +16,25 @@ Collapsed=0
 
 [Window][Renderer Stats]
 Pos=0,0
-Size=213,455
+Size=297,360
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Scene]
-Pos=215,0
-Size=1065,720
+Pos=299,0
+Size=981,720
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000004,0
 
 [Window][Components window]
-Pos=0,457
-Size=213,263
+Pos=0,366
+Size=358,354
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000003,1
 
 [Window][Hierarchy]
 Pos=0,0
-Size=213,455
+Size=297,360
 Collapsed=0
 DockId=0x00000001,0
 
@@ -49,15 +49,15 @@ Size=408,172
 Collapsed=0
 
 [Window][Properties]
-Pos=0,457
-Size=213,263
+Pos=0,362
+Size=297,358
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=1054,280 Size=1280,720 Split=X Selected=0x18B8C0DE
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=213,465 Split=Y Selected=0x7803B429
-    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=402,455 CentralNode=1 Selected=0x788BAA0D
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=402,263 Selected=0xC89E3217
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=1065,465 HiddenTabBar=1 Selected=0x18B8C0DE
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=138,161 Size=1280,720 Split=X Selected=0x18B8C0DE
+  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=297,349 Split=Y Selected=0x788BAA0D
+    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=640,360 CentralNode=1 Selected=0x788BAA0D
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=640,358 Selected=0xC89E3217
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=981,349 Selected=0x18B8C0DE
 
