--- a/EagleEditor/imgui.ini
+++ b/EagleEditor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1280,720
+Size=1400,800
 Collapsed=0
 
 [Window][Debug##Default]
@@ -16,13 +16,13 @@ Collapsed=0
 
 [Window][Renderer Stats]
 Pos=0,0
-Size=297,360
+Size=300,414
 Collapsed=0
 DockId=0x00000001,1
 
 [Window][Scene]
-Pos=299,0
-Size=981,720
+Pos=302,0
+Size=1098,800
 Collapsed=0
 DockId=0x00000004,0
 
@@ -34,12 +34,12 @@ DockId=0x00000003,1
 
 [Window][Hierarchy]
 Pos=0,0
-Size=297,360
+Size=300,414
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-Pos=308,27
+Pos=602,78
 Size=550,680
 Collapsed=0
 
@@ -49,15 +49,28 @@ Size=408,172
 Collapsed=0
 
 [Window][Properties]
-Pos=0,362
-Size=297,358
+Pos=0,416
+Size=300,343
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
+
+[Window][Restart Scene]
+Pos=0,761
+Size=300,39
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Color editor]
+Pos=1156,28
+Size=206,187
+Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=138,161 Size=1280,720 Split=X Selected=0x18B8C0DE
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=297,349 Split=Y Selected=0x788BAA0D
-    DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=640,360 CentralNode=1 Selected=0x788BAA0D
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=640,358 Selected=0xC89E3217
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=981,349 Selected=0x18B8C0DE
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=242,265 Size=1400,800 Split=X Selected=0x18B8C0DE
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=300,349 Split=Y Selected=0x788BAA0D
+    DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=640,414 CentralNode=1 Selected=0x788BAA0D
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=640,384 Split=Y Selected=0xC89E3217
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=224,343 Selected=0xC89E3217
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=224,39 HiddenTabBar=1 Selected=0x2A4D0B77
+  DockNode      ID=0x00000004 Parent=0x8B93E3BD SizeRef=1098,349 HiddenTabBar=1 Selected=0x18B8C0DE
 
